add rosg
