# models/field.go
@@ -2,7 +2,6 @@ package models
 
 import (
 	"errors"
-	"fmt"
 	"reflect"
 	"strings"
 
@@ -10,8 +9,8 @@ import (
 )
 
 type Field struct {
-	Id        int     `orm:"column(id);pk"`
-	Geom      string  `orm:"column(geom);null"`
+	Id int `orm:"column(id);pk"`
+	// Geom      string  `orm:"column(geom);null"`
 	Year      int64   `orm:"column(year);null"`
 	Tip       string  `orm:"column(tip);null"`
 	Areaoil   float64 `orm:"column(areaoil);null"`
@@ -134,30 +133,30 @@ func GetAllField(query map[string]string, fields []string, sortby []string, orde
 
 // UpdateField updates Field by Id and returns error if
 // the record to be updated doesn't exist
-func UpdateFieldById(m *Field) (err error) {
-	o := orm.NewOrm()
-	v := Field{Id: m.Id}
-	// ascertain id exists in the database
-	if err = o.Read(&v); err == nil {
-		var num int64
-		if num, err = o.Update(m); err == nil {
-			fmt.Println("Number of records updated in database:", num)
-		}
-	}
-	return
-}
+// func UpdateFieldById(m *Field) (err error) {
+// 	o := orm.NewOrm()
+// 	v := Field{Id: m.Id}
+// 	// ascertain id exists in the database
+// 	if err = o.Read(&v); err == nil {
+// 		var num int64
+// 		if num, err = o.Update(m); err == nil {
+// 			fmt.Println("Number of records updated in database:", num)
+// 		}
+// 	}
+// 	return
+// }
 
 // DeleteField deletes Field by Id and returns error if
 // the record to be deleted doesn't exist
-func DeleteField(id int) (err error) {
-	o := orm.NewOrm()
-	v := Field{Id: id}
-	// ascertain id exists in the database
-	if err = o.Read(&v); err == nil {
-		var num int64
-		if num, err = o.Delete(&Field{Id: id}); err == nil {
-			fmt.Println("Number of records deleted in database:", num)
-		}
-	}
-	return
-}
+// func DeleteField(id int) (err error) {
+// 	o := orm.NewOrm()
+// 	v := Field{Id: id}
+// 	// ascertain id exists in the database
+// 	if err = o.Read(&v); err == nil {
+// 		var num int64
+// 		if num, err = o.Delete(&Field{Id: id}); err == nil {
+// 			fmt.Println("Number of records deleted in database:", num)
+// 		}
+// 	}
+// 	return
+// }
