# swagger/swagger.yml
@@ -49,23 +49,6 @@ paths:
             $ref: '#/definitions/models.Field'
         "403":
           description: ""
-    post:
-      tags:
-      - field
-      description: create Field
-      operationId: FieldController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for Field content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Field'
-      responses:
-        "201":
-          description: '{int} models.Field'
-        "403":
-          description: body is empty
   /field/{id}:
     get:
       tags:
@@ -85,46 +68,6 @@ paths:
             $ref: '#/definitions/models.Field'
         "403":
           description: :id is empty
-    put:
-      tags:
-      - field
-      description: update the Field
-      operationId: FieldController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for Field content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Field'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Field'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - field
-      description: delete the Field
-      operationId: FieldController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
   /lu/:
     get:
       tags:
@@ -163,23 +106,6 @@ paths:
             $ref: '#/definitions/models.Lu'
         "403":
           description: ""
-    post:
-      tags:
-      - lu
-      description: create Lu
-      operationId: LuController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for Lu content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Lu'
-      responses:
-        "201":
-          description: '{int} models.Lu'
-        "403":
-          description: body is empty
   /lu/{id}:
     get:
       tags:
@@ -199,46 +125,6 @@ paths:
             $ref: '#/definitions/models.Lu'
         "403":
           description: :id is empty
-    put:
-      tags:
-      - lu
-      description: update the Lu
-      operationId: LuController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for Lu content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Lu'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Lu'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - lu
-      description: delete the Lu
-      operationId: LuController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
   /sta/:
     get:
       tags:
@@ -277,23 +163,6 @@ paths:
             $ref: '#/definitions/models.Sta'
         "403":
           description: ""
-    post:
-      tags:
-      - sta
-      description: create Sta
-      operationId: StaController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for Sta content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Sta'
-      responses:
-        "201":
-          description: '{int} models.Sta'
-        "403":
-          description: body is empty
   /sta/{id}:
     get:
       tags:
@@ -313,46 +182,6 @@ paths:
             $ref: '#/definitions/models.Sta'
         "403":
           description: :id is empty
-    put:
-      tags:
-      - sta
-      description: update the Sta
-      operationId: StaController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for Sta content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Sta'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Sta'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - sta
-      description: delete the Sta
-      operationId: StaController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
   /stl/:
     get:
       tags:
@@ -391,23 +220,6 @@ paths:
             $ref: '#/definitions/models.Stl'
         "403":
           description: ""
-    post:
-      tags:
-      - stl
-      description: create Stl
-      operationId: StlController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for Stl content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Stl'
-      responses:
-        "201":
-          description: '{int} models.Stl'
-        "403":
-          description: body is empty
   /stl/{id}:
     get:
       tags:
@@ -427,46 +239,25 @@ paths:
             $ref: '#/definitions/models.Stl'
         "403":
           description: :id is empty
-    put:
+  /stl/ROSG/{rosg}:
+    get:
       tags:
       - stl
-      description: update the Stl
-      operationId: StlController.Put
+      description: get Stl by id
+      operationId: StlController.Get One ROSG
       parameters:
       - in: path
-        name: id
-        description: The id you want to update
+        name: rosg
+        description: The key for staticblock
         required: true
         type: string
-      - in: body
-        name: body
-        description: body for Stl content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Stl'
       responses:
         "200":
           description: ""
           schema:
             $ref: '#/definitions/models.Stl'
         "403":
-          description: :id is not int
-    delete:
-      tags:
-      - stl
-      description: delete the Stl
-      operationId: StlController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
+          description: :rosg is empty
   /stp/:
     get:
       tags:
@@ -505,23 +296,6 @@ paths:
             $ref: '#/definitions/models.Stp'
         "403":
           description: ""
-    post:
-      tags:
-      - stp
-      description: create Stp
-      operationId: StpController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for Stp content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Stp'
-      responses:
-        "201":
-          description: '{int} models.Stp'
-        "403":
-          description: body is empty
   /stp/{id}:
     get:
       tags:
@@ -541,46 +315,6 @@ paths:
             $ref: '#/definitions/models.Stp'
         "403":
           description: :id is empty
-    put:
-      tags:
-      - stp
-      description: update the Stp
-      operationId: StpController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for Stp content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Stp'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Stp'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - stp
-      description: delete the Stp
-      operationId: StpController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
 definitions:
   models.Field:
     title: Field
@@ -594,8 +328,6 @@ definitions:
       Ftype:
         type: string
       Gas:
-        type: string
-      Geom:
         type: string
       Id:
         type: integer
@@ -641,8 +373,6 @@ definitions:
         format: datetime
       Ftype:
         type: string
-      Geom:
-        type: string
       HeadNedro:
         type: string
       Id:
@@ -686,8 +416,6 @@ definitions:
     properties:
       Avts:
         type: string
-      Geom:
-        type: string
       GodEnd:
         type: string
       GodNach:
@@ -727,8 +455,6 @@ definitions:
     properties:
       Avts:
         type: string
-      Geom:
-        type: string
       GodEnd:
         type: string
       GodNach:
@@ -767,8 +493,6 @@ definitions:
     type: object
     properties:
       Avts:
-        type: string
-      Geom:
         type: string
       GodEnd:
         type: string
